--- a/Readme
+++ b/Readme
@@ -63,7 +63,8 @@ Nous pouvons utiliser des données agrégées et anonymisées (qui ne permettent
 
 ## 6. Confidentialité des Enfants
 
-L'Application ÉmojiMot est destinée aux utilisateurs âgés de **16 ans et plus**. Nous ne collectons pas sciemment d'informations personnelles auprès d'enfants de moins de 16ans. Si vous êtes un parent ou tuteur et que vous découvrez que votre enfant de moins de 13 ans nous a fourni des informations (ce qui est très peu probable étant donné la nature locale du stockage), veuillez nous contacter à [votre email : contact@emojimot.com] afin que nous puissions prendre les mesures nécessaires.
+L'Application ÉmojiMot est destinée aux utilisateurs âgés de **16 ans et plus**. Nous ne collectons pas sciemment d'informations personnelles auprès d'enfants de moins de 16ans. Si vous êtes un parent ou tuteur et que vous découvrez que votre enfant de moins de 16 ans nous a fourni des informations (ce qui est très peu probable étant donné la nature locale du stockage), veuillez nous contacter à [votre email : mcsedition@gmail.com
+] afin que nous puissions prendre les mesures nécessaires.
 
 ## 7. Vos Droits
 
@@ -80,6 +81,5 @@ Nous pouvons mettre à jour cette politique de confidentialité de temps à autr
 
 Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter :
 
-* Email : **contact@emojimot.com**
-* Site web : **www.emojimot.com** (Si applicable)
-* Développeur : **[Votre Nom ou Nom de l'Entreprise]**
+* Email : **mcsedition@gmail.com**
+* Développeur : **[mcsedition@gmail.com]**
