--- a/Readme
+++ b/Readme
@@ -3,7 +3,7 @@
 **Date d'entrée en vigueur :** 24 octobre 2025  
 **Dernière mise à jour :** 24 octobre 2025
 
-Bienvenue dans ÉmojiMot ! Cette politique de confidentialité explique comment nous (ÉmojiMot, développé par MCS Édition) collectons, utilisons et protégeons vos informations lorsque vous utilisez notre application mobile ÉmojiMot (l'"Application").
+Bienvenue dans ÉmojiMot ! Cette politique de confidentialité explique comment nous (ÉmojiMot, développé par mcsÉdition) collectons, utilisons et protégeons vos informations lorsque vous utilisez notre application mobile ÉmojiMot (l'"Application").
 
 Votre vie privée est importante pour nous. Veuillez lire attentivement cette politique de confidentialité.
 
